force-app/main/default/objects/LOG_LogMessage__c/LOG_LogMessage__c.object-meta.xml
<CustomObject>
    <description>Container for custom exception/log messages</description>
    <label>Log Message</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Message #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>