force-app/main/default/objects/LOG_LogMessage__c/fields/CalloutType__c.field-meta.xml
<CustomField>
    <fullName>CalloutType__c</fullName>
    <description>This field is used to capture the type of call e.g. GET,POST,PUT etc</description>
    <inlineHelpText>This field is used to capture the type of call e.g. GET,POST,PUT etc</inlineHelpText>
    <label>Callout Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>