force-app/main/default/objects/LOG_LogMessage__c/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <description>This field is used to capture the callout endpoint</description>
    <inlineHelpText>This field is used to capture the callout endpoint</inlineHelpText>
    <label>End Point</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>