force-app/main/default/objects/LOG_LogMessage__c/fields/InterfaceName__c.field-meta.xml
<CustomField>
    <fullName>InterfaceName__c</fullName>
    <description>This field is used to capture the Interface class name</description>
    <inlineHelpText>This field is used to capture the Interface class name</inlineHelpText>
    <label>Interface Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>