force-app/main/default/objects/LOG_LogMessage__c/fields/jsonData__c.field-meta.xml
<CustomField>
    <fullName>jsonData__c</fullName>
    <description>Prescreening results are saved in json format in this field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Json Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>