force-app/main/default/objects/LOG_LogMessage__c/fields/LOG_Age__c.field-meta.xml
<CustomField>
    <fullName>LOG_Age__c</fullName>
    <description>Age in Days</description>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age in Days</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>