force-app/main/default/objects/LOG_LogMessage__c/fields/LOG_Debug_Level__c.field-meta.xml
<CustomField>
    <fullName>LOG_Debug_Level__c</fullName>
    <description>Debug Level</description>
    <label>Debug Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>