force-app/main/default/objects/LOG_LogMessage__c/fields/LOG_Integration_Payload__c.field-meta.xml
<CustomField>
    <fullName>LOG_Integration_Payload__c</fullName>
    <description>If log is integration related show xml payload</description>
    <inlineHelpText>If log is integration related show xml payload</inlineHelpText>
    <label>Integration Payload/Request Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>