force-app/main/default/objects/LOG_LogMessage__c/fields/LOG_Log_Code__c.field-meta.xml
<CustomField>
    <fullName>LOG_Log_Code__c</fullName>
    <description>LOG LogMessage: the exception error code of custom org code for record</description>
    <inlineHelpText>LOG LogMessage: the exception error code of custom org code for record</inlineHelpText>
    <label>Log Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>