force-app/main/default/objects/LOG_LogMessage__c/fields/LOG_Log_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>LOG_Log_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log Date Time</label>
    <type>DateTime</type>
</CustomField>