force-app/main/default/objects/LOG_LogMessage__c/fields/LOG_Message__c.field-meta.xml
<CustomField>
    <fullName>LOG_Message__c</fullName>
    <description>Message to log</description>
    <inlineHelpText>Message to log</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>