force-app/main/default/objects/LOG_LogMessage__c/fields/LOG_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>LOG_Reference_Id__c</fullName>
    <description>The related record Id</description>
    <inlineHelpText>The related record Id</inlineHelpText>
    <label>Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>