force-app/main/default/objects/LOG_LogMessage__c/fields/LOG_Source__c.field-meta.xml
<CustomField>
    <fullName>LOG_Source__c</fullName>
    <description>The originating class/component of log message</description>
    <inlineHelpText>The originating component of log message</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>