force-app/main/default/objects/LOG_LogMessage__c/fields/LOG_Source_Function__c.field-meta.xml
<CustomField>
    <fullName>LOG_Source_Function__c</fullName>
    <description>The originating function in the class/component</description>
    <inlineHelpText>The originating function in the class/component</inlineHelpText>
    <label>Source Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>