force-app/main/default/objects/LOG_LogMessage__c/fields/LOG_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>LOG_Stack_Trace__c</fullName>
    <description>Raw exception stack trace for unhandled errors</description>
    <inlineHelpText>Raw exception stack trace for unhandled errors</inlineHelpText>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>