force-app/main/default/objects/LOG_LogMessage__c/fields/LOG_Timer__c.field-meta.xml
<CustomField>
    <fullName>LOG_Timer__c</fullName>
    <description>The time in milliseconds for the transaction (e.g. For integration/batch apex messages it might be the time taken to process)</description>
    <inlineHelpText>The time in milliseconds for the transaction (e.g. For integration/batch apex messages it might be the time taken to process)</inlineHelpText>
    <label>ExecutionTime (Milliseconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>