force-app/main/default/objects/LOG_LogMessage__c/fields/ResponseData__c.field-meta.xml
<CustomField>
    <fullName>ResponseData__c</fullName>
    <description>This field is used to capture the integration response data</description>
    <inlineHelpText>This field is used to capture the integration response data</inlineHelpText>
    <label>Response Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>