force-app/main/default/objects/LOG_LogMessage__c/recordTypes/SSPPrescreening.recordType-meta.xml
<RecordType>
    <fullName>SSPPrescreening</fullName>
    <active>true</active>
    <description>This record type for Log Messages is specific to saving JSON Response of prescrening tool</description>
    <label>SSPPrescreening</label>
</RecordType>