force-app/main/default/objects/LOG_LogMessage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LOG_Log_Date_Time__c</columns>
    <columns>LOG_Debug_Level__c</columns>
    <columns>LOG_Source__c</columns>
    <columns>LOG_Source_Function__c</columns>
    <columns>LOG_Log_Code__c</columns>
    <columns>LOG_Message__c</columns>
    <columns>LOG_Reference_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>